# Zynq-SHA-512_256-MCDMA-HLS-Application

./: .gitignore  README.md
Application/_ide/: .peers.ini  .vitisPlatformRepo.json  workspace_journal.py  workspace_journal_9668.py
Application/app_component/_ide/psinit/: psu_init.tcl
Application/app_component/src/: CMakeLists.txt  UserConfig.cmake  compile_commands.json  main_user.c  sha_api.c  sha_api.h  sha_config.h
Application/platform/: vitis-comp.json
Application/platform/hw/sdt/: pcw.dtsi  psu_init_gpl.h
Application/platform/zynqmp_fsbl/: CMakeLists.txt  app.yaml  psu_init.h
Application/platform/zynqmp_fsbl/zynqmp_fsbl_bsp/: bsp.yaml  lib_list.yaml  lop-config.dts.dtb  lop-config.dts.pp
Application_1/_ide/: .peers.ini  .vitisPlatformRepo.json  workspace_journal.py  workspace_journal_20456.py
Application_1/app_component/_ide/: hwspec.checksum  launch.json
Application_1/app_component/src/: CMakeLists.txt  app.yaml  compile_commands.json  main.c
Application_1/platform/hw/: design_1_wrapper.xsa
Application_1/platform/zynqmp_fsbl/: app.yaml
HLS/SHA_256_HLS_Component/: compile_commands.json  hls_config.cfg  tb.cpp  test.cpp  vitis-comp.json
HLS/SHA_256_HLS_Component/test/: test.hlscompile_summary  test.hlsrun_cosim_summary  test.hlsrun_csim_summary  test.hlsrun_impl_summary  test.hlsrun_package_summary
HLS/_ide/: .peers.ini  settings.json  workspace_journal.py  workspace_journal_19916.py
Vivado/project_1/: project_1.xpr
Vivado/project_1/project_1.gen/sources_1/bd/design_1/ip/design_1_test_1_0/drivers/test_v1_0/src/: CMakeLists.txt  xtest.c
(+1766 files in other folders)
